test/neg/bug106.scala
class T extends AnyRef;
class S extends T with Object;
